--- a/src/App.css
+++ b/src/App.css
@@ -78,9 +78,13 @@ form button:hover {
 	padding: 1rem;
 	cursor: pointer;
 	font-size: 1rem;
+	transition: 0.5s ease-in-out;
 }
 .complete-btn {
 	background: rgb(11, 212, 162);
+}
+.complete-btn:hover {
+	background-color: rgb(33, 85, 12);
 }
 .todo-item {
 	padding: 0rem 0.5rem;
